Fix footer alignment on mobile

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -113,6 +113,7 @@ footer {
 .Footer-social {
   @media (max-width: $layout-mobile) {
     height: 100px;
+    align-items: center;
     margin-top: 40px;
     border-top: 1px solid $light-grey;
   }
